<resources>
    <string name="app_name">Labb_3_android</string>
    <string name="age">age</string>
    <string name="supermail">supermail</string>
    <string name="name">name</string>
    <string name="welcomeText">Welcome Helldiver!</string>
    <string name="infoText">Information about Automaton enemy units:</string>
    <string name="propagandaText">TODO propaganda text</string>
    <string name="enlistNow">Enlist Now!</string>
    <string name="disclaimer">I am willing to die for Super Earth and am ready to perish in the pursuit of spreading managed democracy to the galaxy</string>
    <string name="header">TODO header</string>
    <string name="propaganda">Current orders for Helldivers, join now and support fellow Helldivers in this mission!</string>
    <string name="bodyText">TODO lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="outroText">Congratulations on joining the</string>
    <string name="thanks">Democracy thanks you, </string>
    <string name="join">Join the</string>
    <string name="today">today!!</string>
    <string name="more">More</string>
    <string name="toEnlist">Enlist</string>
    <string name="toPropaganda">News</string>
    <string name="backHome">Home</string>
    <string name="propagandaHeader">Our Helldivers\' Current Mission:</string>
    <string name="propagandaTv">Enlist now to become a Helldiver and join in this honorable mission!</string>
    <string name="hunterTv">Hunters are small terminid units that often travel in large packs with another, or in groups with other units. They are prone to jump from side to side before quickly striking, beware the claws!</string>
    <string name="spewerTv">Bile Spewers are large, venomous terminid units that usually travel alone. They spew bile from their large bellies that is quite toxic.</string>
    <string name="biletitanTv">Bile Titans are enormous rare terminid units that few helldivers ever get to see! Like the Bile Spewers they spew out toxic bile at perceived threats.</string>
    <string name="botTv">The Commissar automatons come equipped with either swords or blasters, they\'re the bread and butter of the automaton forces.</string>
    <string name="dsTv">Dropships come to the aid of automaton forces if requested via a flare, they will drop additional automaton units, more units to bring democracy to!</string>
    <string name="striderTv">Strider units have a regular footsoldier at the helm, simply eliminate the strider and only the regular unit will remain.</string>
    <string name="infoHeader">Information about Terminid enemy units:</string>


</resources>